# synth

./: Cargo.toml  main.rs  midi.rs
program/: Cargo.toml  ffi.rs  lib.rs
program/logic/: mod.rs
program/logic/pad/: mod.rs  piano.rs
program/logic/synth/: mod.rs  osc.rs
program/utils/: color.rs  mod.rs
program/utils/math/: float.rs  mod.rs  range.rs
program/utils/sound/: mod.rs  note.rs
program/utils/synth/: mod.rs  waveform.rs
types/: Cargo.toml  launch_control_xl.rs  launchpad_x.rs  lib.rs
